--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,15 @@ dependencies:
   rxdart: ^0.27.5
   audio_video_progress_bar: ^0.10.0
   marquee: ^2.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies: 
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
+  hive_generator: ^1.1.3
 
 flutter: 
   uses-material-design: true
