--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   carousel_slider: ^4.1.1
+  sleek_circular_slider: ^2.0.1
+  fluttertoast: ^8.0.9
 
 
 dev_dependencies: 
