--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   carousel_slider: ^4.1.1
   sleek_circular_slider: ^2.0.1
   fluttertoast: ^8.0.9
+  url_launcher: ^6.1.5
 
 
 dev_dependencies: 
