--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fluttertoast: ^8.0.9
   url_launcher: ^6.1.5
   just_audio_background: ^0.0.1-beta.7
+  dio: ^4.0.6
 
 
 dev_dependencies: 
